# rust-aegis-msvc-aesni-test

./: Cargo.toml
src/: main.rs
