[package]
name = "rust-aegis-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aegis = { git = "https://github.com/mfrischknecht/rust-aegis.git", branch = "fix-rust-cross-mingw-compilation" }
rand = "0.8.5"
